refactor: update product and user repository initialization and handlers
